style(ZNTA-2318): fix 'needs work' option wraping in dropdown

--- a/server/zanata-frontend/src/app/editor/components/Dropdown/index.css
+++ b/server/zanata-frontend/src/app/editor/components/Dropdown/index.css
@@ -97,6 +97,10 @@ not conflict with the other frontend code
   background-color: var(--Dropdown-item-hover-color-bg);
 }
 
+.TransUnit-panelFooter .EditorDropdown .EditorButton {
+  min-width: 15px;
+}
+
 /**
  * Modifiers
  */
